--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,9 @@
       <div class="carousel-item carousel-image bg-img-3"></div>
     </div>
     <div class="row home-page-buttons justify-content-center mt-3">
-     <div class="col-10 d-flex justify-content-center">
-      <%= image_tag("logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
-    </div>
+      <div class="col-10 d-flex justify-content-center">
+        <%= image_tag("logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
+      </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center btn-block">
         <h5 class="btn-56"><%= link_to 'FIND A QUIZ', venues_path %></h5>
       </div>
@@ -26,6 +26,88 @@
 
 
 <%# QUIZZING SECTION %>
+
+<%# CAROUSEL FOR QUIZZING CATEGORIES %>
+<div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" data-controller="multiple-images">
+    <div class="carousel-item active" data-multiple-images-target="card1">
+      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent d-flex">
+        <%= link_to venues_path do %>
+        <div class="quizzing-category-img-1 category-image position-relative">
+          <h4 class="card-title font-weight-bold align-self-end">PUBS</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="carousel-item" data-multiple-images-target="card2">
+      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <%= link_to corporate_path do %>
+        <div class="quizzing-category-img-2 category-image position-relative">
+          <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="carousel-item" data-multiple-images-target="card3">
+      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <%= link_to charity_path do %>
+        <div class="quizzing-category-img-3 category-image position-relative">
+          <h4 class="card-title font-weight-bold align-self-end">CHARITY</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="carousel-item" data-multiple-images-target="card4">
+      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <%= link_to charity_path do %>
+        <div class="quizzing-category-img-4 category-image position-relative">
+          <h4 class="card-title font-weight-bold align-self-end">PRIVATE</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="carousel-item" data-multiple-images-target="card5">
+      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+        <%= link_to charity_path do %>
+        <div class="quizzing-category-img-5 category-image position-relative">
+          <h4 class="card-title font-weight-bold align-self-end">VIRTUAL</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<%# END OF CAROUSEL %>
+
 <div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-lg">
   <h1 class="d-flex justify-content-center mb-3">QUIZZING</h1>
 
