--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,6 +52,7 @@
   color: black;
   font-weight: lighter;
  }
+
 .category-cards a {
   text-decoration: none;
   color: black;
@@ -104,6 +105,48 @@
   border-radius: 5px;
   font-family: $lovelo;
 }
+
+// CAROUSEL --> DISPLAY THREE CARDS AT THE SAME TIME
+@media (max-width: 767px) {
+  .carousel-inner .carousel-item > div {
+    display: none;
+  }
+  .carousel-inner .carousel-item > div:first-child {
+    display: block
+  }
+}
+
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+}
+
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
+
+// CAROUSEL CONTROLS
+.carousel-control-prev, .carousel-control-next {
+  bottom: 100px;
+  opacity: 1;
+}
+
 
 .karaoke-cards {
   .card-title {
