--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -60,19 +60,19 @@
 }
 
 .quizzing-category-img-1 {
-  background-image: url("smile.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
-}
-
-.quizzing-category-img-2 {
   background-image: url("dog.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
+.quizzing-category-img-2 {
+  background-image: url("finger.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
 .quizzing-category-img-3 {
-  background-image: url("answers.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("smile.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-4 {
-  background-image: url("finger.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: url("answers.png"), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 
 .quizzing-category-img-5 {
@@ -111,8 +111,8 @@
   .carousel-inner .carousel-item > div {
     display: none;
   }
-  .carousel-inner .carousel-item > div:first-child {
-    display: block
+  .carousel-inner .carousel-item.active > div:first-child {
+    display: block;
   }
 }
 
@@ -123,23 +123,23 @@
   justify-content: space-evenly;
 }
 
-/* medium and up screens */
-@media (min-width: 768px) {
-  .carousel-inner .carousel-item-end.active,
-  .carousel-inner .carousel-item-next {
-    transform: translateX(25%);
-  }
+// /* medium and up screens */
+// @media (min-width: 768px) {
+//   .carousel-inner .carousel-item-end.active,
+//   .carousel-inner .carousel-item-next {
+//     transform: translateX(25%);
+//   }
 
-  .carousel-inner .carousel-item-start.active,
-  .carousel-inner .carousel-item-prev {
-    transform: translateX(-25%);
-  }
-}
+//   .carousel-inner .carousel-item-start.active,
+//   .carousel-inner .carousel-item-prev {
+//     transform: translateX(-25%);
+//   }
+// }
 
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start {
-  transform: translateX(0);
-}
+// .carousel-inner .carousel-item-end,
+// .carousel-inner .carousel-item-start {
+//   transform: translateX(0);
+// }
 
 // CAROUSEL CONTROLS
 .carousel-control-prev, .carousel-control-next {
