--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,128 +26,89 @@
 
 
 <%# QUIZZING SECTION %>
-
-<%# CAROUSEL FOR QUIZZING CATEGORIES %>
-<div id="quizzing-categories-carousel" class="carousel" data-interval="false">
-  <div class="carousel-inner" data-controller="multiple-images">
-    <div class="carousel-item active" data-multiple-images-target="card1">
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent d-flex">
-        <%= link_to venues_path do %>
-        <div class="quizzing-category-img-1 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">PUBS</h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="carousel-item" data-multiple-images-target="card2">
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to corporate_path do %>
-        <div class="quizzing-category-img-2 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
-        </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="carousel-item" data-multiple-images-target="card3">
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to charity_path do %>
-        <div class="quizzing-category-img-3 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">CHARITY</h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="carousel-item" data-multiple-images-target="card4">
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to charity_path do %>
-        <div class="quizzing-category-img-4 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">PRIVATE</h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
-      </div>
-    </div>
-    <div class="carousel-item" data-multiple-images-target="card5">
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to charity_path do %>
-        <div class="quizzing-category-img-5 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">VIRTUAL</h4>
-        </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#quizzing-categories-carousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#quizzing-categories-carousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<%# END OF CAROUSEL %>
-
-<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-lg">
+<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-xxl">
   <h1 class="d-flex justify-content-center mb-3">QUIZZING</h1>
 
-    <div class="row category-cards gx-0 justify-content-evenly">
-
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent d-flex">
-        <%= link_to venues_path do %>
-        <div class="quizzing-category-img-1 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">PUBS</h4>
+<%# CAROUSEL FOR QUIZZING CATEGORIES %>
+  <div id="quizzing-categories-carousel" class="carousel" data-interval="false">
+    <div class="carousel-inner" data-controller="multiple-images">
+      <div class="carousel-item active" data-multiple-images-target="card1">
+        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to venues_path do %>
+          <div class="quizzing-category-img-1 category-image position-relative">
+            <h4 class="card-title font-weight-bold align-self-end">PUBS</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <% end %>
         </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
       </div>
-
-
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to corporate_path do %>
-        <div class="quizzing-category-img-2 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
+      <div class="carousel-item" data-multiple-images-target="card2">
+        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to corporate_path do %>
+          <div class="quizzing-category-img-2 category-image position-relative">
+            <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
+          </div>
+          <% end %>
         </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. </p>
-        </div>
-        <% end %>
       </div>
-
-      <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
-        <%= link_to charity_path do %>
-        <div class="quizzing-category-img-3 category-image position-relative">
-          <h4 class="card-title font-weight-bold align-self-end">CHARITY</h4>
+      <div class="carousel-item" data-multiple-images-target="card3">
+        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to charity_path do %>
+          <div class="quizzing-category-img-3 category-image position-relative">
+            <h4 class="card-title font-weight-bold align-self-end">CHARITY</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <% end %>
         </div>
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <% end %>
       </div>
-
+      <div class="carousel-item" data-multiple-images-target="card4">
+        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to private_path do %>
+          <div class="quizzing-category-img-4 category-image position-relative">
+            <h4 class="card-title font-weight-bold align-self-end">PRIVATE</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="carousel-item" data-multiple-images-target="card5">
+        <div class="card category-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
+          <%= link_to virtual_path do %>
+          <div class="quizzing-category-img-5 category-image position-relative">
+            <h4 class="card-title font-weight-bold align-self-end">VIRTUAL</h4>
+          </div>
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+          <% end %>
+        </div>
+      </div>
     </div>
+    <a class="carousel-control-prev" href="#quizzing-categories-carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#quizzing-categories-carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+<%# END OF CAROUSEL %>
   </div>
 </div>
 
+
 <%# KARAOKE SECTION %>
-<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-lg">
+<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-xxl">
   <h1 class="d-flex justify-content-center mb-3">KARAOKE</h1>
 
     <div class="row category-cards karaoke-cards gx-0 justify-content-center">
