added <meta name="turbo-cache-control" content="no-cache"> to head to prevent issues with javascript on homepage when returning to it using back button

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -123,23 +123,23 @@
   justify-content: space-evenly;
 }
 
-// /* medium and up screens */
-// @media (min-width: 768px) {
-//   .carousel-inner .carousel-item-end.active,
-//   .carousel-inner .carousel-item-next {
-//     transform: translateX(25%);
-//   }
+/* medium and up screens */
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
 
-//   .carousel-inner .carousel-item-start.active,
-//   .carousel-inner .carousel-item-prev {
-//     transform: translateX(-25%);
-//   }
-// }
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+}
 
-// .carousel-inner .carousel-item-end,
-// .carousel-inner .carousel-item-start {
-//   transform: translateX(0);
-// }
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
+}
 
 // CAROUSEL CONTROLS
 .carousel-control-prev, .carousel-control-next {
