sorted issue with border radius

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,7 +80,7 @@
 }
 
 
-.category-img {
+.category-image img {
   border-radius: 5px;
 }
 
@@ -131,7 +131,6 @@
 }
 
 
-// KARAOKE SECTION
 .karaoke-cards {
   .card-title {
     background-color: $orange;
