changed container for quizzing and karaoke to fluid

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
 
 
 <%# QUIZZING SECTION %>
-<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-xxl">
+<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
   <h1 class="d-flex justify-content-center mb-3">QUIZZING</h1>
 
 <%# CAROUSEL FOR QUIZZING CATEGORIES %>
@@ -108,7 +108,7 @@
 
 
 <%# KARAOKE SECTION %>
-<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-xxl">
+<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
   <h1 class="d-flex justify-content-center mb-3">KARAOKE</h1>
 
     <div class="row category-cards karaoke-cards gx-0 justify-content-center">
