--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,13 +12,13 @@
         <%= image_tag("logo.png", class: "logo mb-3 mt-5 img-fluid", alt: "quizmaster logo") %>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center btn-block">
-        <h5 class="btn-56"><%= link_to 'FIND A QUIZ', venues_path %></h5>
+        <h5 class="btn-red"><%= link_to 'FIND A QUIZ', venues_path %></h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="btn-56"><%= link_to 'START A QUIZ!', start_a_quiz_path %></h5>
+        <h5 class="btn-red"><%= link_to 'START A QUIZ!', start_a_quiz_path %></h5>
       </div>
       <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-        <h5 class="btn-56"><%= link_to 'HOST YOUR OWN', host_your_own_path %></h5>
+        <h5 class="btn-red"><%= link_to 'HOST YOUR OWN', host_your_own_path %></h5>
       </div>
     </div>
   </div>
