--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,27 +1,28 @@
 
 .btn-red {
-  appearance: button;
+  // appearance: button;
   background-color: $quiz-dog-red;
   // border: 1px solid #000;
   border-radius: 5px;
   // box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   color: #fff;
-  cursor: pointer;
-  display: inline-block;
+  // cursor: pointer;
+  // display: inline-block;
   font-family: $lovelo;
   line-height: 20px;
-  margin: 0 5px 10px 0;
+  // margin: 0 5px 10px 0;
   overflow: visible;
-  padding: 14px 40px 10px;
+  padding: 14px 0px 10px;
   text-align: center;
-  text-transform: none;
-  touch-action: manipulation;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
+  // text-transform: none;
+  // touch-action: manipulation;
+  // user-select: none;
+  // -webkit-user-select: none;
+  // vertical-align: middle;
   white-space: nowrap;
   text-decoration: none;
+  width: 270px;
 }
 
 .btn-red:focus {
