added hr lines to home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,6 +45,12 @@
   }
 }
 
+.dividing-line-black {
+  border-bottom: 2px solid black !important;
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 5px;
+}
 // Category cards for QUIZZING and KARAOKE
 
 .carousel-item a {
