--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-
+<hr class="dividing-line-black">
 <%# QUIZZING SECTION %>
 <div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
   <h1 class="d-flex justify-content-center mb-3">QUIZZING</h1>
@@ -106,6 +106,7 @@
   </div>
 </div>
 
+<hr class="dividing-line-black">
 
 <%# KARAOKE SECTION %>
 <div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
