--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,6 +53,10 @@
 }
 // Category cards for QUIZZING and KARAOKE
 
+.card-body {
+  padding-bottom: 0px;
+}
+
 .carousel-item a {
   text-decoration: none;
   color: black;
