justified text in cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,8 +53,15 @@
 }
 // Category cards for QUIZZING and KARAOKE
 
+
 .card-body {
   padding-bottom: 0px;
+}
+// here I removed bottom padding from bootstrap card to even out spacing on page
+
+.card-text {
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .carousel-item a {
