aligned center text in yellow bubble on venues index page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -176,4 +176,6 @@
   background-color: $yellow;
   padding: 1.5rem;
   border-radius: 5px;
+  text-align: center;
+  // text-justify: inter-word;
 }
