--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -5,12 +5,16 @@
     <div class="punters-text-overlay col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
       <h1 class="d-flex justify-content-center mt-5 mb-3">COME QUIZ WITH US</h1>
       <div class="text-bubble">
-        <p class="d-flex align-items-center">Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes? Fancy learning something whilst damaging close friendships?</p>
-        <p class="d-flex align-items-center">Sick of the same egg heads winning every week?</p>
-        <p class="d-flex align-items-center"> If yes, Quiz Dog has you covered.</p>
-        <p class="d-flex align-items-center"> We have venues all across London (and one in America) that blow the rest out of the water.</p>
-        <p class="d-flex align-items-center">Everything’s done on your phone too, because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!</p>
-        <p class="d-flex align-items-center mb-0">Check our venues page to find your closest Quiz Dog event.</p>
+        <p>
+          Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes?
+          Fancy learning something whilst damaging close friendships? Sick of the same egg heads winning every week?
+        </p>
+        <p> If yes, Quiz Dog has you covered.</p>
+        <p>
+          We have venues all across London (and one in America) that blow the rest out of the water. Everything’s done on your phone too,
+          because we want to save this planet one sheet of paper at a time! And with our anti-cheating measures, you can’t lose (unless you score fewer points than the other teams)!!!
+        </p>
+        <p class=" mb-0">Check our venues page to find your closest Quiz Dog event.</p>
       </div>
     </div>
   </div>
