changed bubble on venues index to orange

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -172,7 +172,7 @@
 
 // WHO WE ARE SECTION
 
-.text-bubble {
+.text-bubble-yellow {
   background-color: $yellow;
   padding: 1.5rem;
   border-radius: 5px;
