--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -146,7 +146,7 @@
 
   <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
     <h2 class="d-flex justify-content-center">JOE AND DOGS</h2>
-    <div class="text-bubble">
+    <div class="text-bubble-yellow">
       <p class="d-flex justify-content-center"> Quiz Dog was founded in 2019 (a historically brilliant year to start any business) after Joe had worked for many years in the industry. We wanted to do things differently. Focussing on fun, sustainability, and dynamic hosting. </p>
       <p>Starting in Peckham and Deptford, we now span across the capital (and even have an event in the USA). Our goal is to expand across the country and beyond, providing the best quizzing event it’s possible to have.</p>
       <p class="mb-0">Where do dogs come into it? Joe likes dogs. It’s as simple as that. Just so happens that we are just like a pack of playful, adventurous, ol' faithfuls ourselves. Please bring your dogs along to the quiz. They’ll be on Instagram immediately!</p>
