--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -4,7 +4,7 @@
   <div class="container-lg d-flex justify-content-center">
     <div class="punters-text-overlay col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
       <h1 class="d-flex justify-content-center mt-5 mb-3">COME QUIZ WITH US</h1>
-      <div class="text-bubble">
+      <div class="text-bubble-orange">
         <p>
           Fancy the funnest challenge you can have in a pub? Fancy winning loads of prizes?
           Fancy learning something whilst damaging close friendships? Sick of the same egg heads winning every week?
