--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <%# CAROUSEL WITH BACKGROUND IMAGES + LOGO AND BUTTONS %>
 <div class="top mb-5">
-  <div id="home-page-carousel" class="carousel slide" data-bs-ride="carousel" data-interval="3000" data-pause="false">
+  <div id="home-page-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-inner">
       <div class="carousel-item carousel-image bg-img-1 active"></div>
       <div class="carousel-item carousel-image bg-img-2"></div>
