--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -2,8 +2,8 @@
 
 <div class="container">
   <h1 class="d-flex justify-content-center mb-1">QUIZDOG ADMIN</h1>
-  <div class="w-20">
-    <%= link_to "Log out", destroy_user_session_path, class: "d-flex justify-content-center", data: {turbo_method: :delete} %>
+  <div class="w-20 d-flex justify-content-center">
+    <%= link_to "Log out", destroy_user_session_path, class: "btn btn-danger", data: {turbo_method: :delete} %>
   </div>
   <%# VENUES TAB SECTION %>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
