--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
       <% end %>
       <%= link_to host_your_own_path do %>
         <div class="col-md-12 col-sm-12 d-flex justify-content-center">
-          <h5 class="btn-red">HOST YOUR OWN'</h5>
+          <h5 class="btn-red">HOST YOUR OWN</h5>
         </div>
       <% end %>
     </div>
