--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -122,7 +122,7 @@
     <div class="carousel-inner" data-controller="karaoke-carousel">
 
       <div class="carousel-item active" data-karaoke-carousel-target="card1">
-        <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent d-flex">
+        <div class="card category-card karaoke-card m-2 col-lg-3 col-md-6 col-sm-12 border-0 bg-transparent">
           <%= link_to corporate_karaoke_path do %>
           <div class="quizzing-category-img-1 category-image position-relative">
             <h4 class="card-title font-weight-bold align-self-end">CORPORATE</h4>
