fixed small issue with controls carousel

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -178,7 +178,7 @@
     justify-content: space-around;
   }
 
-  #karaoke-categories-carousel .carousel-control-prev, .carousel-control-next {
+  #karaoke-categories-carousel .carousel-control-prev, #karaoke-categories-carousel .carousel-control-next {
     display: none;
   }
 }
