changed url for venues index bacgrkound pic

--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -21,7 +21,7 @@
 }
 
 .banner-image-venues {
-  background-image: url('banner1.png'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
+  background-image: url('quizzing-3.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
   height: 60vh;
   background-size: cover;
   background-position: center;
