--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <%# CAROUSEL WITH BACKGROUND IMAGES + LOGO AND BUTTONS %>
-<div class="top mb-5">
+<div class="top">
   <div id="home-page-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
     <div class="carousel-inner">
       <div class="carousel-item carousel-image bg-img-1 active"></div>
@@ -30,10 +30,9 @@
   </div>
 </div>
 
-<hr class="dividing-line-black">
 <%# QUIZZING SECTION %>
-<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
-  <h1 class="d-flex justify-content-center mb-3">QUIZZING</h1>
+<div id="quizzing-section" class="d-flex mt-5 mb-5 flex-column align-items-center container-fluid">
+  <h1 class="mb-3">QUIZZING</h1>
 
 <%# CAROUSEL FOR QUIZZING CATEGORIES %>
   <div id="quizzing-categories-carousel" class="carousel" data-interval="false">
@@ -115,8 +114,8 @@
 <hr class="dividing-line-black">
 
 <%# KARAOKE SECTION %>
-<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column container-fluid">
-  <h1 class="d-flex justify-content-center mb-3">KARAOKE</h1>
+<div id="karaoke-section" class="d-flex mt-5 mb-5 flex-column align-items-center container-fluid">
+  <h1 class="mb-3">KARAOKE</h1>
 
   <div id="karaoke-categories-carousel" class="carousel" data-interval="false">
     <div class="carousel-inner" data-controller="karaoke-carousel">
@@ -159,10 +158,10 @@
 </div>
 
 <%# WHO WE ARE SECTION %>
-<div id="who-we-are-section" class="d-flex flex-column align-items-center container-lg">
-  <h1 class="d-flex justify-content-center">WHO WE ARE</h1>
+<div id="who-we-are-section" class="d-flex flex-column align-items-center container-fluid">
+  <h1>WHO WE ARE</h1>
 
-  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column">
+  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
     <h2 class="d-flex justify-content-center">JOE AND DOGS</h2>
     <div class="text-bubble-yellow">
       <p class="d-flex justify-content-center"> Quiz Dog was founded in 2019 (a historically brilliant year to start any business) after Joe had worked for many years in the industry. We wanted to do things differently. Focussing on fun, sustainability, and dynamic hosting. </p>
@@ -186,20 +185,25 @@
   </div>
 </div>
 
-<h1>SUSTAINABILITY</h1>
-<h4>Carbon Footprintp</h4>
-<p>
-  We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
-  We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
-</p>
 
-<h4>Planting trees, ecologi online</h4>
-
-<p>
-  One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
-  Click here to see how many trees we’ve planted!
-</p>
-
+<div id="sustainability-section" class="d-flex flex-column align-items-center container-fluid">
+  <div class="col-lg-8 col-md-8 col-sm-12 d-flex flex-column align-items-center">
+    <h1>SUSTAINABILITY</h1>
+    <h4>Carbon Footprintp</h4>
+    <div class="text-bubble-green">
+      <p class="mb-0">
+        We take our environmental duties very seriously here at Quiz Dog. Between answer sheets and ink for picture rounds, the carbon footprint of a quiz can expand to those sasquatch prints in the snow.
+        We decided to make a difference and put everything online. No easy task given the access to Google, but with our anti-cheating measures, we are confident we have the greenest events company on the market. We are always looking for ways in which we can go even further with lessening our environmental impact and are striving for complete carbon neutrality.
+      </p>
+    </div>
+    <h4 class="mt-3">Planting trees, ecologi online</h4>
+    <div class="text-bubble-green">
+      <p class="mb-0">
+        One of the ways in which we are doing our bit for mother earth is by promising to plant a tree for every corporate client we have playing the quiz. This is done in partnership with the amazing people over at Ecologi (a B-Corps certificate company).
+        Click here to see how many trees we’ve planted!
+      </p>
+    </div>
+  </div>
 <div id="contact-section" class="d-flex flex-column container-lg align-center">
   <h1 class="d-flex justify-content-center">CONTACT QUIZDOG</h1>
 </div>
