--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,3 +1,3 @@
-<h2>Create a new VENUE!</h2>
+<h2 class="d-flex justify-content-center mt-3">Create a new VENUE!</h2>
 
 <%= render "shared/venue_form" %>
