changed quizmaster form to simple_form

--- a/app/views/quizmasters/edit.html.erb
+++ b/app/views/quizmasters/edit.html.erb
@@ -1,3 +1,3 @@
-<h2>Edit one of your QUIZMASTERS!</h2>
+<h2 class="d-flex justify-content-center mt-3">Edit <%= @quizmaster.name %></h2>
 
 <%= render "shared/quizmaster_form", quizmaster: @quizmaster %>
