--- a/app/views/shared/_venue_form.html.erb
+++ b/app/views/shared/_venue_form.html.erb
@@ -11,7 +11,7 @@
       <%= form.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
 
       <div class="form-group mb-3">
-        <p>Quizmaster:</p>
+        <p>Quizmasters:</p>
       <%# collection_check_boxes takes four arguments:
       1. :venue_ids is the attribute of Quizmaster object to which the selected values will be assigned.
       2. Venue.all retrieves all instances to display in the list
