--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,3 +1,3 @@
-<h2>Update one of your VENUES!</h2>
+<h2 class="d-flex justify-content-center mt-3">Update <%= @venue.name %></h2>
 
 <%= render "shared/venue_form", venue: @venue %>
