--- a/app/views/quizmasters/new.html.erb
+++ b/app/views/quizmasters/new.html.erb
@@ -1,3 +1,3 @@
-<h2 class="d-flex justify-content-center mt-3">Create no new QUIZMASTER!</h2>
+<h2 class="d-flex justify-content-center mt-3">Create a new QUIZMASTER!</h2>
 
 <%= render "shared/quizmaster_form", quizmaster: @quizmaster %>
