--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -20,24 +20,28 @@
       <%= link_to "Create a VENUE!", new_venue_path, class: "btn btn-success btn-create" %>
       <%# VENUE CARDS %>
       <div class="cards">
-        <% @venues.each do |venue| %>
-        <div class="admin-card-venue">
-          <div class="card-venue">
-            <%= cl_image_tag venue.photo.key %>
-            <div class="card-venue-title">
-              <h6><%= venue.name %></h6>
+        <% if @venues.empty? %>
+          <p>No venues yet.</p>
+        <% else %>
+          <% @venues.each do |venue| %>
+          <div class="admin-card-venue">
+            <div class="card-venue">
+              <%= cl_image_tag venue.photo.key %>
+              <div class="card-venue-title">
+                <h6><%= venue.name %></h6>
+              </div>
+              <div class="card-venue-info">
+                <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
+                <p class="venue-address"><%= venue.address.partition(" London ").first%><%= venue.address.partition(" London ").last%></p>
+                <p class="venue-phone-number"><%= venue.phone_number %></p>
+              </div>
             </div>
-            <div class="card-venue-info">
-              <p class="venue-day-time"><%= venue.day_of_the_week.upcase %> at <%= venue.time.strftime('%H:%M') %></p>
-              <p class="venue-address"><%= venue.address.partition(" London ").first%><%= venue.address.partition(" London ").last%></p>
-              <p class="venue-phone-number"><%= venue.phone_number %></p>
+            <div class="admin-cards-buttons">
+              <%= link_to "Edit", edit_venue_path(venue), class: "btn btn-primary"%>
+              <%= link_to "Delete", venue_path(venue), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
             </div>
           </div>
-          <div class="admin-cards-buttons">
-            <%= link_to "Edit", edit_venue_path(venue), class: "btn btn-primary"%>
-            <%= link_to "Delete", venue_path(venue), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-          </div>
-        </div>
+          <% end %>
         <% end %>
       </div>
     </div>
@@ -47,28 +51,32 @@
       <%= link_to "Create a QUIZMASTER!", new_quizmaster_path, class: "btn btn-success btn-create" %>
       <%# Quizmaster Cards %>
       <div class="cards">
-        <% @quizmasters.each do |quizmaster| %>
-          <div class="quizmaster-card">
-            <% if quizmaster.photo.key %>
-            <%= cl_image_tag quizmaster.photo.key %>
-            <% end %>
-            <h4><%= quizmaster.name %></h4>
-            <p><%= quizmaster.profile %></p>
-            <div class="quizmaster-venues">
-              <h6><%= quizmaster.name %>'s PUBS</h6>
-              <% if quizmaster.venues.empty? %>
-                <p>No pubs yet</p>
-              <% else %>
-                <% quizmaster.venues.each do |venue| %>
-                  <p><%= venue.name %></p>
-                <% end %>
+        <% if @quizmasters.empty? %>
+          <p>No quizmasters yet.</p>
+        <% else %>
+          <% @quizmasters.each do |quizmaster| %>
+            <div class="quizmaster-card">
+              <% if quizmaster.photo.key %>
+              <%= cl_image_tag quizmaster.photo.key %>
               <% end %>
+              <h4><%= quizmaster.name %></h4>
+              <p><%= quizmaster.profile %></p>
+              <div class="quizmaster-venues">
+                <h6><%= quizmaster.name %>'s PUBS</h6>
+                <% if quizmaster.venues.empty? %>
+                  <p>No pubs yet.</p>
+                <% else %>
+                  <% quizmaster.venues.each do |venue| %>
+                    <p><%= venue.name %></p>
+                  <% end %>
+                <% end %>
+              </div>
+              <div class="admin-quizmaster-buttons">
+                <%= link_to "Edit", edit_quizmaster_path(quizmaster), class: "btn btn-primary" %>
+                <%= link_to "Delete", quizmaster_path(quizmaster), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
+              </div>
             </div>
-            <div class="admin-quizmaster-buttons">
-              <%= link_to "Edit", edit_quizmaster_path(quizmaster), class: "btn btn-primary" %>
-              <%= link_to "Delete", quizmaster_path(quizmaster), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}  %>
-            </div>
-          </div>
+          <% end %>
         <% end %>
       </div>
     </div>
