--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -175,12 +175,16 @@
   <h2 class="mt-5 mb-3">OUR HOSTS</h1>
   <%# Quizmaster Cards %>
   <div class="cards">
-    <% @quizmasters.each do |quizmaster| %>
-    <div class="quizmaster-card">
-      <%= cl_image_tag quizmaster.photo.key %>
-      <h4><%= quizmaster.name %></h4>
-      <p><%= quizmaster.profile %></p>
-    </div>
+    <% if @quizmasters.empty? %>
+      <p> No quizmasters yet.</p>
+    <% else %>
+      <% @quizmasters.each do |quizmaster| %>
+        <div class="quizmaster-card">
+          <%= cl_image_tag quizmaster.photo.key %>
+          <h4><%= quizmaster.name %></h4>
+          <p><%= quizmaster.profile %></p>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
