--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -3,7 +3,8 @@
 <div class="container">
   <h1 class="d-flex justify-content-center mb-1">QUIZDOG ADMIN</h1>
   <div class="w-20 d-flex justify-content-center">
-    <%= link_to "Log out", destroy_user_session_path, class: "btn btn-danger", data: {turbo_method: :delete} %>
+    <%= link_to "Log out", destroy_user_session_path, class: "btn btn-danger top-buttons", data: {turbo_method: :delete} %>
+    <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-primary top-buttons" %>
   </div>
   <%# VENUES TAB SECTION %>
   <ul class="nav nav-tabs" id="myTab" role="tablist">
