--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -35,7 +35,7 @@
         <p>No venues yet.</p>
       <% else %>
         <% @venues.each do |venue| %>
-          <div class="card-venue">
+          <div class="card-venue" id=<%="anchor-#{venue.id}"%>>
             <% if venue.photo %>
             <%= cl_image_tag venue.photo.key %>
             <% end %>
