--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -135,7 +135,9 @@
   font-family: $lovelo;
 }
 
-
-
+// class for selected card
+.card-venue-active {
+  background-color: $orange;
+}
 
 // box shadow box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
