added data-controller, data actions and data targets to html. When the anchor link is clicked the selected class is applied to the card and the title changes from yellow to orange

--- a/app/views/venues/_info_window.html.erb
+++ b/app/views/venues/_info_window.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h6 class="mb-0 pb-0">
-    <%= link_to venue.name, "#anchor-#{venue.id}" %>
+  <h6 class="mb-0 pb-0" data-action="click->select-card#select">>
+    <%= link_to venue.name, "##{venue.id}" %>
   </h6>
 </div>
