--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -125,18 +125,19 @@
   }
 }
 
-.card-title {
-  position: absolute;
-  bottom: 10px;
-  padding: 5px 10px 0px;
-  background-color: $yellow;
-  // margin: 0 5px 10px 0;
-  border-radius: 5px;
-  font-family: $lovelo;
-}
+// .card-title {
+//   position: absolute;
+//   bottom: 10px;
+//   padding: 5px 10px 0px;
+//   background-color: green;
+//   // margin: 0 5px 10px 0;
+//   border-radius: 5px;
+//   font-family: $lovelo;
+// }
 
 // class for selected card
-.card-venue-active {
+.selected .card-venue-title h6 {
+  font-size: large;
   background-color: $orange;
 }
 
