--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,6 +16,8 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   margin-bottom: 2rem;
+  transform: scale(1);
+  transition: all 0.4s;
 }
 
 .card-venue img {
