--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -136,9 +136,18 @@
 // }
 
 // class for selected card
-.selected .card-venue-title h6 {
-  font-size: large;
-  background-color: $orange;
+.selected {
+  opacity: 1;
+  transform: scale(1.02);
+
+  .card-venue-title h6 {
+    font-size: large;
+    background-color: $orange;
+}}
+
+.notselected {
+  opacity: 0.5;
+  transform: scale(0.9);
 }
 
 // box shadow box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
