added deselect function to select card controller. Removed highlight-card controller

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -35,7 +35,7 @@
         <p>No venues yet.</p>
       <% else %>
         <% @venues.each do |venue| %>
-          <div class="card-venue" id=<%="#{venue.id}"%> data-select-card-target = "card">
+          <div class="card-venue" id=<%="#{venue.id}"%> data-select-card-target = "card" data-action="click->select-card#deselect">
             <% if venue.photo %>
             <%= cl_image_tag venue.photo.key %>
             <% end %>
