--- a/app/assets/stylesheets/pages/_venues_index.scss
+++ b/app/assets/stylesheets/pages/_venues_index.scss
@@ -48,6 +48,15 @@
 .mapboxgl-popup-content {
   padding: 10px 10px 6px !important;
   border-radius: 5px !important;
+  a {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+.mapboxgl-popup-close-button {
+  right: -3px !important;
+  top: -5px !important;
 }
 
 .cards {
